Ignoring the Stx prefix from =destination, and again removed some leftovers